# opencv_course

./: CMakeLists.txt
applications/: 1_import_images.cpp  2_image_basics.cpp  3_resize_crop.cpp  4_drawing.cpp  5_warp.cpp  6_color_detection.cpp  7_shapes_contours.cpp  8_face_detection.cpp  CMakeLists.txt  document_scanner.cpp  license_plate_detector.cpp  virtual_painter.cpp
